# DeepLearningLib

./: CMakeLists.txt  README.md  file.txt  filestructure.txt  test.cpp
data/: sample_financial_data.csv
examples/: simple_feedforward.cpp
include/DeepFinanceDL/activations/: activation.h  relu.h
include/DeepFinanceDL/core/: tensor.h
include/DeepFinanceDL/datasets/: dataset.h  financial_dataset.h
include/DeepFinanceDL/layers/: dense.h  layer.h
include/DeepFinanceDL/models/: feedforward.h  model.h
include/DeepFinanceDL/optimizers/: optimizer.h  sgd.h
include/DeepFinanceDL/utils/: logger.h
src/: yo.cpp
src/DeepFinanceDL/activations/: relu.cpp
src/DeepFinanceDL/core/: tensor.cpp
src/DeepFinanceDL/datasets/: financial_dataset.cpp
src/DeepFinanceDL/layers/: dense.cpp
src/DeepFinanceDL/models/: feedforward.cpp
src/DeepFinanceDL/optimizers/: sgd.cpp
src/DeepFinanceDL/utils/: logger.cpp
